feat: added translation preparations
