# src/main/openapi/openapi-bff.yaml
@@ -15,6 +15,8 @@ tags:
     description: Retrieve the User Profile
   - name: permission
     description: Retrieve Permissions
+  - name: translation
+    description: Retrieve Translations
 paths:
   /workspaceConfig:
     post:
@@ -286,6 +288,35 @@ paths:
                 $ref: '#/components/schemas/ProblemDetailResponse'
         '404':
           description: Permissions not found
+  /translations:
+    post:
+      x-onecx:
+        permissions:
+          translation:
+            - read
+      tags:
+        - translation
+      operationId: getTranslations
+      description: Get translations for specified artifact, version and locale
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GetTranslationsRequest'
+      responses:
+        '200':
+          description: Translations retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetTranslationsResponse'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetailResponse'
 components:
   schemas:
     IconCriteria:
@@ -689,6 +720,48 @@ components:
           type: array
           items:
             type: string
+    TranslationsContext:
+      type: object
+      required:
+        - artifact
+      properties:
+        artifact:
+          type: string
+        version:
+          type: string
+    GetTranslationsRequest:
+      type: object
+      required:
+        - appId
+        - productName
+      properties:
+        locale:
+          type: string
+        context:
+          type: array
+          items:
+            $ref: '#/components/schemas/TranslationsContext'
+    TranslationResult:
+      type: object
+      required:
+        - artifact
+      properties:
+        artifact:
+          type: string
+        version:
+          type: string
+        translations:
+          type: object
+          additionalProperties: true
+    GetTranslationsResponse:
+      type: object
+      required:
+        - translations
+      properties:
+        translations:
+          type: array
+          items:
+            $ref: '#/components/schemas/TranslationResult'
     ProblemDetailResponse:
       type: object
       properties:
